<resources>
    <string name="app_name">MapApp</string>
    <string name="empty_not_saved" translatable="false">Nota não foi salva, pois não tinha título</string>
    <string name="apagar_n">Apagar</string>
    <string name="guardar_n">Guardar</string>
    <string name="titulo_n">Notas:</string>
    <string name="tit_n">Inserir Titulo</string>
    <string name="desc_n">Inserir Descricao</string>
    <string name="apagar_nota">Apagar nota:</string>
    <string name="mensagem_apagar">Tem a certeza que quer eliminar a nota?</string>
    <string name="sim">SIM</string>
    <string name="nao">NÃO</string>
    <string name="ab_criarNota_n">Criar uma nova Nota</string>
    <string name="ab_editarNota_n">Editar a Nota</string>
    <string name="btn_lo">entrar</string>
    <string name="username">nome de usuário:</string>
    <string name="pass">palavra-passe:</string>
    <string name="WrongUser">Nome de utilizador não existe</string>
    <string name="wrongPass">Palavra-passe errada</string>
    <string name="login_pass">Insira palavra-passe</string>
    <string name="login_user">Insira nome utilizador</string>
    <string name="username_null">nome do utilizador está vazio</string>
    <string name="pass_null">A palavra passe está vazia</string>
    <string name="AddProb_actionBar">Adicionar um problema</string>
    <string name="listProb_actionBar">Problemas</string>
    <string name="InsertLong">Inserir longitude</string>
    <string name="insertLat">Inserir Latitude</string>
    <string name="coords">Obter as suas coordenadas atuais</string>
    <string name="fotoProb">Adicionar fotografia</string>
    <string name="TipoProb">Selecione um tipo de problema:</string>

    <string name="sound">sound</string>
    <string name="user">user</string>
    <string name="password">pass</string>
    <string name="preference_file_key">file</string>

    <string-array name="tipoProb">
        <item>obras</item>
        <item>acidente</item>
        <item>buracos</item>
        <item>estrada fechada</item>
        <item>engarrafamento</item>
    </string-array>
    <string name="title_activity_mapa">Map</string>
    <string name="my_account">Menu</string>
    <string name="home">Home</string>
    <string name="Problemas">Problemas</string>
    <string name="notas">Notas</string>
    <string name="logout">Terminar Sessão</string>
    <string name="Bemvindo">"Ola, "</string>
    <string name="mapa">Mapa</string>
    <string name="Action_barEditarProb">Editar Problema</string>
    <string name="extendedFloatButtonDist">Distância</string>
    <string name="extendedFloatButtonTipoProb">Problemas</string>
    <string name="tipoProbObras">Obras</string>
    <string name="tipoProbEstrFechada">EstradaFechada</string>
    <string name="tipoProbBuracos">Buracos</string>
    <string name="tipoProbEngarra">Engarrafamento</string>
    <string name="tipoProbAcidente">Acidente</string>
    <string name="noFiltro">Sem filtros</string>
    <string name="RemeberLogin">lembrar-se</string>
    <string name="apagar_marker">Tem certeza que quer eliminar o reporte?</string>
    <string name="apagar_markerTit">Apagar Reporte?</string>
    <string name="TitVazioE">Título está vazio</string>
    <string name="DescVaziaE">Descrição está vazio</string>
    <string name="ti">Titulo</string>
    <string name="tp">Tipo Problema:</string>
    <string name="im">imagem:</string>
    <string name="de">descricao:</string>
    <string name="addtit">Titulo está vazio</string>
    <string name="addDes">Descricao está vazia</string>
    <string name="addLa">Latitude está vazia</string>
    <string name="addLon">Longitude está vazio</string>
</resources>