<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/drawerLayout">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".mapa" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="341dp"
            android:layout_marginRight="341dp"
            android:src="@drawable/ic_baseline_menu_open_24"
            android:id="@+id/imgmenu"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/distFloatBtn"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            android:clickable="true"
            android:text="@string/extendedFloatButtonDist"
            app:srcCompat="@android:drawable/ic_dialog_map"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/quinhentos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="239dp"
            android:layout_marginLeft="239dp"
            android:layout_marginTop="124dp"
            android:layout_marginBottom="1dp"
            android:text="500m" />

        <Button
            android:id="@+id/mil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="133dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="124dp"
            android:layout_marginBottom="100dp"
            android:text="1000m" />

        <Button
            android:id="@+id/milquinhentos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="124dp"
            android:layout_marginBottom="100dp"
            android:text="1500m" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabTipoProb"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="200dp"
            android:clickable="true"
            android:text="@string/extendedFloatButtonTipoProb"
            app:srcCompat="@android:drawable/ic_dialog_map"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/btnObras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="263dp"
            android:layout_marginBottom="100dp"
            android:text="@string/tipoProbObras" />

        <Button
            android:id="@+id/btnEstradaFechada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="121dp"
            android:layout_marginLeft="121dp"
            android:layout_marginTop="263dp"
            android:layout_marginBottom="100dp"
            android:text="@string/tipoProbEstrFechada" />

        <Button
            android:id="@+id/btnAcidente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="298dp"
            android:layout_marginLeft="298dp"
            android:layout_marginTop="263dp"
            android:layout_marginBottom="100dp"
            android:text="@string/tipoProbAcidente" />

        <Button
            android:id="@+id/btnBuracos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="320dp"
            android:layout_marginBottom="100dp"
            android:text="@string/tipoProbBuracos" />

        <Button
            android:id="@+id/btnEngarrafamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="163dp"
            android:layout_marginLeft="163dp"
            android:layout_marginTop="320dp"
            android:layout_marginBottom="100dp"
            android:text="@string/tipoProbEngarra" />

        <Button
            android:id="@+id/noFiltro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="646dp"
            android:layout_marginBottom="100dp"
            android:text="@string/noFiltro" />

    </RelativeLayout>
    <include layout="@layout/header_navigation_drawer"></include>

</androidx.drawerlayout.widget.DrawerLayout>

