<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_n">

    <EditText
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="505dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/tit_n"
        android:inputType="textAutoComplete"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/descricao"
        android:hint="@string/desc_n"
        android:layout_width="379dp"
        android:layout_height="182dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="243dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/guardar"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="496dp"
        android:background="@drawable/n_btn"
        android:text="@string/guardar_n"
        app:backgroundTint="@color/teal_700" />

    <Button
        android:id="@+id/apagar"
        android:layout_width="53dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="358dp"
        android:layout_marginLeft="358dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/ic_baseline_delete_forever_24" />

    <Button
        android:id="@+id/back"
        android:layout_width="53dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/ic_baseline_arrow_back_24" />

</RelativeLayout>