<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdicionarProblema"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-11dp"
        android:layout_marginRight="-11dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/actionBar"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="-6dp"
                android:layout_marginRight="-6dp"
                android:layout_marginBottom="0dp"
                android:background="#03A9F4"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/ab_criarNota_n"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/tit_n"
                android:inputType="textAutoComplete"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/descricao"
                android:layout_width="393dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="0dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/desc_n"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/longitude"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/tit_n"
                android:inputType="textAutoComplete"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/latitude"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/tit_n"
                android:inputType="textAutoComplete"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="400dp"
                android:layout_height="65dp"
                android:background="#03A9F4"
                android:entries="@array/tipoProb" />

            <Button
                android:id="@+id/imagem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/guardar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
